Fixed height on iphone

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  min-height: 100vh;
+  height: 100%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -13,10 +13,4 @@
   --partial-colour: #b59f3b;
   --transparent-colour: rgba(128, 128, 128, .4);
   --backdrop-colour: rgb(40, 44, 52, .8);
-}
-
-@supports (-webkit-touch-callout: none) {
-  .App {
-    min-height: -webkit-fill-available;
-  }
 }
